# requiem_blog

./: README.md  pyproject.toml
app/: main.py  user_data.py
app/crud/: post_crud.py  user_crud.py  view_crud.py
app/database/: database.py
app/models/: base_model.py  post_model.py  user_model.py  view_model.py
app/routes/: api.py  login.py  post.py  user.py  view.py
app/schemas/: post_schema.py  user_schema.py  view_schema.py
app/seguridad/: seguridad_login.py
